--- a/labourmanagement/src/main/resources/templates/base.html
+++ b/labourmanagement/src/main/resources/templates/base.html
@@ -28,7 +28,7 @@
           <a class="nav-link" th:href="@{/about/}" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" th:href="@{/user/index}">Login</a>
         </li>
         <li class="nav-item">
         <a class="nav-link" th:href="@{/signup/}" href="#">Signup</a>
