--- a/labourmanagement/src/main/resources/templates/normal/base.html
+++ b/labourmanagement/src/main/resources/templates/normal/base.html
@@ -7,13 +7,14 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-<link rel="stylesheet" th:href="@{css/style.css}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" th:href="@{/css/style.css}">
   <title th:text="${title}">Hello, world!</title>
 </head>
 <body>
 <!--navbar-->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Labour Management System</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,14 +25,15 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" th:href="@{/}" href="#">Home</a>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/about/}" href="#">About</a>
+          <a class="nav-link" href="#" >
+            <span th:text="${user.name}">
+
+          </span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" th:href="@{/user/index}">Login</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" th:href="@{/signup/}" href="#">Signup</a>
+        <a class="nav-link" th:href="@{/logout}" href="#">logout</a>
       </li>
 
 
@@ -41,8 +43,27 @@
   </div>
 </nav>
 <!--End navbar-->
+<!--sidebar-->
+<div class="sidebar mt-2">
+  <span onclick="toggleSidebar()" class="crossBtn">&times;</span>
+<a href="#" th:href="@{/user/index}" class="item"><i class="fa-solid fa-house-user"></i> Home</a>
+<a href="#" class="item"><i class="fa-solid fa-address-book"></i> View Labours</a>
+<a href="#" th:href="@{/user/add-labour}" class="item"><i class="fa-solid fa-person-circle-plus"></i> Add Labour</a>
+<a href="#" class="item"><i class="fa-solid fa-user"></i> Your Profile</a>
+<a href="#" class="item"><i class="fa-solid fa-gear"></i> Settings</a>
+<a href="#" th:href="@{/logout}" class="item"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+<div class="divider"> </div>
+</div>
+<!--End sidebar-->
+<!--content area-->
+<div class="content mt-5">
+  <i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
 
-<div th:replace="${content}"></div>
+  <div th:replace="${content}"></div>
+
+</div>
+<!-- End Content -->
+
 <!-- Optional JavaScript; choose one of the two! -->
 
 <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
