--- a/labourmanagement/src/main/resources/templates/normal/user_dashboard.html
+++ b/labourmanagement/src/main/resources/templates/normal/user_dashboard.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:replace="normal/base::layout(~{::section})">
 <head>
     <meta charset="UTF-8">
-    <title>User dashboard</title>
+    <title>login</title>
 </head>
 <body>
-<section><h1> User login page</h1>
-    <h2>for free time</h2></section>
+<section><h1>This is login page</h1>
+</section>
 </body>
 </html>
-
